# capstone_ws

./: .gitignore  area_multicamera_hybrid_pi_v1.py  balance_config.json  ball_point_error_function.json  force_coeffs.json  force_inv_quadratic_fitting.py  force_quadratic_fitting.py  force_residue_dynamics.py  forcemap_visual.py  quadratic_fitting.py  tactile_config.json  tester.py
.claude/: settings.local.json
figure/: all_jacobians.py  df_err_eef_jacobian.py  f_err_eef_jacobian.py
scripts/: plot_current_vs_tilt.py  plot_force_vs_tilt.py
src/: shm_test.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/srv/: ComputeFingertipPositions.srv  ComputeTorque.srv
src/torque_controller/: CMakeLists.txt  package.xml
src/torque_controller/launch/: balance_control.launch.py  ball_calibration.launch.py  hand_control.launch.py  hand_visualize.launch.py  joint_current_test.launch.py  spring_control.launch.py  task_space_control.launch.py
src/torque_controller/rviz/: config.rviz
src/torque_controller/src/: ball_calibration_node.cpp  ball_tracker_node.cpp  joint_pos_publisher.cpp  joint_torque_subscriber.cpp  pub_posvel_sub_torque.cpp  pub_posvel_sub_torque.cpp.bak  spring_damper.cpp  spring_damper.cpp.bak  spring_damper_3axis.cpp  tactile_ball_tracker.cpp  tactile_ball_tracker_debug.cpp  tactile_ball_tracker_fit.cpp
src/torque_controller/torque_controller/: __init__.py  axis_controller.py  balance_controller.py  balance_controller.py.bak  balance_controller_ball_est.py  dynamixel_shm_interface.py  fingertip_server.py  jacobian_server.py  joint_current_tester.py  kalman_filter.py  position_controller.py  spring_damper_ui_node backup v3.py  spring_damper_ui_node backup v4.py  spring_damper_ui_node.py  spring_damper_ui_node_backup.py  spring_damper_ui_node_backup_v2.py  task_space_control.py  visual_ball_tracker_node.py
src/torque_controller/urdf/: hand_0926.urdf
src/torque_controller/urdf/hand_0926/: hand_0926.usd
src/torque_controller/urdf/hand_0926/configuration/: FL11.tmp.usd  FL12.tmp.usd  FL13.tmp.usd  FL14.tmp.usd  FL21.tmp.usd  FL22.tmp.usd  FL23.tmp.usd  FL24.tmp.usd  FL31.tmp.usd  FL32.tmp.usd  FL33.tmp.usd  FL34.tmp.usd  base_link.tmp.usd  hand_0926_physics.usd  hand_0926_sensor.usd
src/torque_controller/urdf/meshes/: FL11.STL  FL12.STL  FL13.STL  FL14.STL  FL21.STL  FL22.STL  FL23.STL  FL24.STL  FL31.STL  FL32.STL  FL33.STL  FL34.STL  base_link.STL
